--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -103,13 +103,11 @@
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
- <p>Use this guidance if the contract was formed (unless the contract states differently):</p>
+ <p>Use this guidance if the <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> was formed (unless the contract states differently):</p>
 <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span> In a province or a territory other than Quebec  </li>
 <li><span class="fas fa-check fa-li text-success"></span> Outside Canada and the employment is performed in a province or territory other than Quebec</li>
 </ul>
-
-<p>Learn more: <a href="contract.html">Determine if a contract is valid</a></p>
 
 <h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>			 
 <ul class="cnjnctn-type-or cnjnctn-sm">
@@ -1786,15 +1784,11 @@
 	</div></section>
 
 
-<section id="contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
-	</header>	<div class="modal-body">		
-	<div data-ajax-replace="#ajax-contract"></div>
+<section id="ajax-contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
+	</header>	<div class="modal-body">	
+	<div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#contract"></div>	
 	</div></section>
 
-<section id="contract1" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
-	</header>	<div class="modal-body">		
-	<div data-ajax-replace="#ajax-contract"></div>
-	</div></section>
 
 <section id="person" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">What is a person</h2>
 	</header>	<div class="modal-body">		
