--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -50,7 +50,7 @@
                 href: "https://www.canada.ca/en/services/taxes.html"
               },{
                 title: "Payroll",
-                href: "../index.html"
+                href: "../../index.html"
               },{
                 title: "Determine the employment status: Employee, incorporated employee or self-employed",
                 href: "index.html"
@@ -129,11 +129,6 @@
 </ul>
 
 
-<section id="ajax-psb" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">What is considered a personal services business (PSB)</h2>
-	</header>	<div class="modal-body">		
-	<div data-ajax-replace="/cra-arc/payroll/guidance/factors-psb.html#ajax-psb-classification"></div>
-	</div></section>
-
 
 <section id="ajax-contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
 	</header>	<div class="modal-body">	
@@ -142,8 +137,7 @@
 
 	 
 
-
-              <div id="def-preFooter"></div>
+    <div id="def-preFooter"></div>
             <!-- Write closure template -->
             <script type="text/javascript">
                var defPreFooter = document.getElementById("def-preFooter");
