--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -221,6 +221,18 @@
                Indicator: The worker is not an incorporated employee</h3>
 <hr>
 <p>The worker is <strong>not</strong> an incorporated employee. This also means that the worker is <strong>not</strong> operating a personal service business (PSB).</p>
+
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4>You are not sure about the worker classification</h4>
+<p class="mrgn-tp-md">To determine if the worker is considered an employee or self-employed, continue to:. </p>
+<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker if the worker is an employee or self-employed</a> </p>
+
+</li>
+<li class="cnjnctn-col"><h4>You know the worker classification</h4>
+<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the income tax, payroll and GST/HST tax obligations</a></p>
+</li>
+</ul>
+
 <p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker is an employee or self-employed</a></p>
 </div>
 
