--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -223,12 +223,11 @@
 <p>The worker is <strong>not</strong> an incorporated employee. This also means that the worker is <strong>not</strong> operating a personal service business (PSB).</p>
 
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"><h4>You are not sure about the worker classification</h4>
-<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker if the worker is an employee or self-employed</a> </p>
-
+<li class="cnjnctn-col">If you are not sure about the worker classification, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker if the worker is an employee or self-employed</a> 
 </li>
-<li class="cnjnctn-col"><h4>You know the worker classification</h4>
-<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the income tax, payroll and GST/HST tax obligations</a></p>
+
+<li class="cnjnctn-col">
+<p>If you know the worker classification, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the income tax, payroll and GST/HST tax obligations</a></p>
 </li>
 </ul>
 </div>
