--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -135,7 +135,7 @@
                       </div>
 	
 		<ul>
-		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-psb1no", "live": true}'>Yes </li>
+		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-psb2no", "live": true}'>Yes </li>
 		<li>No
 		<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>	
 <div class="wb-fieldflow-header">
@@ -148,7 +148,7 @@
 
 		
 		<ul>
-		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-psb1no", "live": true}'>Yes</li>
+		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-psb2no", "live": true}'>Yes</li>
 		<li>No 
 		<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>	
 	<div class="wb-fieldflow-header">
@@ -161,7 +161,7 @@
 		
 		<ul>
 		 <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-psb5yes", "live": true}'>Yes</li>
-		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-psb1no", "live": true}'>No </li>
+		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-psb2no", "live": true}'>No </li>
          <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-psb5not", "live": true}'>Not sure</li>
 		</ul>
 	</div>		
@@ -175,7 +175,7 @@
 	</div>	
 			
 			</li>
-		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-psb1no", "live": true}'>No</li>
+		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-psb2no", "live": true}'>No</li>
 		</ul>
 	</div>	
 			
@@ -230,6 +230,15 @@
 <p>If you know the worker classification, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the income tax, payroll and GST/HST tax obligations</a></p>
 </li>
 </ul>
+</div>
+
+<div id="ajax-psb2no" class="hidden wb-frmvld gc-font-2019 alert alert-info">
+ <h3><small>Your result </small><br>
+               Indicator: The worker is not an incorporated employee</h3>
+<hr>
+<p>The worker is <strong>not</strong> an incorporated employee. This also means that the worker is <strong>not</strong> operating a personal service business (PSB).</p>
+
+<p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/after.html">Understand the income tax, payroll and GST/HST tax obligations</a></p>
 </div>
 
 </div>
