--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -795,7 +795,7 @@ html:lang(fr) .cnjnctn-or:before {
 </details>
 
 	      <details>
-		      <summary>If you are filing for an <strong>individual</strong> or <strong>Canadian corporation</strong></summary>
+		      <summary>If you are filing <strong>for</strong> an individual or Canadian corporation</summary>
 <p><a href="https://www.canada.ca/en/revenue-agency/services/e-services/represent-a-client.html" target="_blank">Represent a Client</a></p>
      <ul><li>Fill out the UHT2900, Underused Housing Tax Return and Election Form (PDF) and upload it through your CRA Represent a Client</li></ul>
 	     
