--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -1015,7 +1015,7 @@ html:lang(fr) .cnjnctn-or:before {
 <p>We cannot provide a defined list of records that you can use to support an exemption because each person’s situation is unique. </p>
 
 	  <details>
-		  <summary>Examples of records</summary>
+		  <summary>Examples of records to keep</summary>
 		  <p>Examples of records to support the information you provide in your return could include, but are not limited to the following:</p>	  
 	<ul>
 		<li>Municipal property tax assessment notice</li>
