LPRAB edits to CPB

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1301,7 +1301,7 @@ html:lang(fr) .cnjnctn-or:before {
           <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn14/exemption-vacation-properties-manual-place-search-instructions.html">UHTN14, Exemption for vacation properties (Manual place-search instructions)</a></p>
 	  </details>
         </details>
-        <p class="mrgn-tp-md">The CRA is not collecting or retaining any of the information you enter on this page. The results that are obtained after completing the interactive tool are not binding. The results are dependent on the accuracy of the information that is entered. </p>
+        <p class="mrgn-tp-md">The CRA does not collect or retain any of the information you enter on this page. The results that are obtained after you complete the interactive tool are not binding on the CRA. The results are dependent on the accuracy of the information that is entered. </p>
 		<p>If you are uncertain about your obligations and liabilities under the Underused Housing Tax Act, you may contact us or request a ruling or interpretation about how the tax applies to your specific situation.</p>
         <p><a href="https://test.canada.ca/cra-arc/subway/uht/contact.html">Contact us</a></p>
       </div>
