--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -222,8 +222,8 @@
 <hr>
 <p>The worker is <strong>not</strong> an incorporated employee. This also means that the worker is <strong>not</strong> operating a personal service business (PSB).</p>
 
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"> <p class="mrgn-rght-md"> If you are not sure about the worker classification, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker if the worker is an employee or self-employed</a></p> 
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"> If you are not sure about the worker classification, continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Determine if the worker if the worker is an employee or self-employed</a> 
 </li>
 
 <li class="cnjnctn-col">
