--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -92,7 +92,9 @@
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
-<p>You need to consider multiple factors to determine if the worker is an incorporated employee. If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB).</p>
+<p>Use this guidance if the <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> was formed and you want to know if the worker is an incorporated employee.</p>
+
+<p>If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if an individual performs the services on behalf of their own corporation. This may be considered a personal services business (PSB).</p>
 
 <h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
@@ -284,14 +286,10 @@
 	</div></section>
 
 
-<section id="contract1" class="mfp-hide modal-dialog modal-content overlay-def">	<header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
-	</header>	<div class="modal-body">		
-	<div data-ajax-replace="#ajax-contract"></div>
-	</div></section>
 
-<section id="contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
-	</header>	<div class="modal-body">		
-	<div data-ajax-replace="#ajax-contract"></div>
+<section id="ajax-contract" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg"><header class="modal-header"><h2 class="modal-title">Validity of the contract</h2>
+	</header>	<div class="modal-body">	
+	<div data-ajax-replace="/cra-arc/payroll/guidance/overview.html#contract"></div>	
 	</div></section>
 
 <section id="person" class="wb-overlay modal-content overlay-def wb-popup-mid overlay-bg">	<header class="modal-header"><h2 class="modal-title">What is a person</h2>
