--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -90,22 +90,30 @@
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
-<h2 class="h3">On this page</h2>
-  <ul>
-	<li><a href="#h_1">Understanding your tax obligations</a></li>
-	<li><a href="#h_2">Help for small businesses</a></li>    
-	<li><a href="#h_3">Correcting your tax affairs</a></li> 
-	<li><a href="#h_4">Consequences of non-compliance</a></li>  
-	<li><a href="#h_6">References</a></li>   
-  </ul>
+<p>Depending if the worker is an <strong>employee</strong>, an <strong>incorporated employee</strong> or is <strong>self-employed</strong> the tax obligations may be different.</p>
 
-   
+<p>Understanding your tax obligations based on the type of business:</p>
+<ul>
+<li><a href="#tab1" class="wb-tabs-ext">Employer</a> </li>
+<li><a href="#tab2" class="wb-tabs-ext">Self-employed</li>
+<li><a href="#tab3" class="wb-tabs-ext">Incorporated employee (personal services business)</a></li>
+</ul>   
 
-<h2 id="h_1">Understanding your tax obligations</h2>		
+ <div class="wb-tabs mrgn-tp-lg">
+    <div class="tabpanels">
+      <details id="tab1">
+        <summary>Employer</summary>
+
 <h3 id="h_1a">Most businesses </h3>
 <p>Learn more on income tax, GST/HST and payroll obligations for most businesses: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/small-businesses-self-employed-income/checklist-small-businesses.html">Checklist for businesses</a> </p>
 
-<h3 id="h_1b">Personal services businesses (PSBs) </h3>
+</details>
+ <details id="tab2">
+        <summary>Self-employed</summary>
+	 
+</details>
+ <details id="tab3">
+        <summary>Incorporated employee (personal services business)</summary>
 <p>PSB's have different tax obligations.</p>
 <details><summary>Income tax obligations</summary>
 <p>For a PSB, the income tax obligations are different than other corporations. </p>
@@ -173,6 +181,12 @@
 <li>Not registered for the GST/HST or filed the required returns </li>
 </ul>
 </details>
+
+</details>
+</div></div>
+  
+
+
 
 
 <h2 id="h_2">Help for small businesses</h2>
