--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -96,7 +96,7 @@
 <ul>
 <li><a href="#tab1" class="wb-tabs-ext">Employer</a> </li>
 <li><a href="#tab2" class="wb-tabs-ext">Self-employed</li>
-<li><a href="#tab3" class="wb-tabs-ext">Incorporated employee (personal services business)</a></li>
+<li><a href="#tab3" class="wb-tabs-ext">Incorporated employee</a> (personal services business)</li>
 </ul>   
 
  <div class="wb-tabs mrgn-tp-lg">
@@ -104,16 +104,16 @@
       <details id="tab1">
         <summary>Employer</summary>
 
-<h3 id="h_1a">Most businesses </h3>
+<h3 id="h_1a">Most businesses</h3>
 <p>Learn more on income tax, GST/HST and payroll obligations for most businesses: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/small-businesses-self-employed-income/checklist-small-businesses.html">Checklist for businesses</a> </p>
 
 </details>
  <details id="tab2">
         <summary>Self-employed</summary>
-	 
+<p>Add info here</p>	 
 </details>
  <details id="tab3">
-        <summary>Incorporated employee (personal services business)</summary>
+        <summary>Incorporated employee</summary>
 <p>PSB's have different tax obligations.</p>
 <details><summary>Income tax obligations</summary>
 <p>For a PSB, the income tax obligations are different than other corporations. </p>
