--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -115,7 +115,7 @@
  <details id="tab3">
         <summary>Incorporated employee</summary>
 <p>PSB's have different tax obligations.</p>
-<details><summary>Income tax obligations</summary>
+<h3>Income tax obligations</h3>
 <p>For a PSB, the income tax obligations are different than other corporations. </p>
 
 <details><summary>Tax deductions and tax rates</summary>
@@ -144,15 +144,14 @@
 <li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-payments/paying-your-balance-corporation-tax/balance-day.html">Remit (pay) the income tax</a> (same as regular Corporations) </li>
 </ul>
 
-</details>
-<details><summary>GST/HST obligations</summary>
+<h3>GST/HST obligations</h3>
 <p>For a PSB, the GST/HST obligations are the same as other corporations. </p>
 
 <h3>Withholding, filing and payment obligations</h3>
 <p><span class="fas fa-check fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">Withhold, file and remit the GST/HST</a> (same as regular Corporations) </p>
-</details>
 
-<details><summary>Payroll obligations</summary>
+
+<h3>Payroll obligations</h3>
 <p>For payments made to a worker that is a PSB, the payroll tax obligations are different than other corporations. </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h3 class="text-muted">Payer</h3>
@@ -169,7 +168,6 @@
 </li>
 </ul>
 
-</details>
 <details><summary>Examples of non-compliance for PSB corporations</summary>
 <p>Examples of <strong>non-compliance</strong> situation for PSB corporations: </p>
 <ul>
