--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -104,13 +104,31 @@
       <details id="tab1">
         <summary>Employer</summary>
 
-<h3 id="h_1a">Most businesses</h3>
-<p>Learn more on income tax, GST/HST and payroll obligations for most businesses: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/small-businesses-self-employed-income/checklist-small-businesses.html">Checklist for businesses</a> </p>
+<h3>Income tax obligations</h3>
+<p>Add info </p>
+
+<h3>Payroll obligations</h3>
+<p>Add info </p>
+
+<h3>GST/HST obligations</h3>
+<p>Add info </p>
+
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/small-businesses-self-employed-income/checklist-small-businesses.html">Checklist for businesses</a> </p>
 
 </details>
  <details id="tab2">
         <summary>Self-employed</summary>
-<p>Add info here</p>	 
+
+<h3>Income tax obligations</h3>
+<p>Add info </p>
+
+<h3>Payroll obligations</h3>
+<p>Add info </p>
+	 
+<h3>GST/HST obligations</h3>
+<p>Add info </p>
+
+<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/small-businesses-self-employed-income/checklist-small-businesses.html">Checklist for businesses</a> </p>
 </details>
  <details id="tab3">
         <summary>Incorporated employee</summary>
@@ -144,13 +162,6 @@
 <li><span class="fas fa-check fa-li fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/corporations/corporation-payments/paying-your-balance-corporation-tax/balance-day.html">Remit (pay) the income tax</a> (same as regular Corporations) </li>
 </ul>
 
-<h3>GST/HST obligations</h3>
-<p>For a PSB, the GST/HST obligations are the same as other corporations. </p>
-
-<h3>Withholding, filing and payment obligations</h3>
-<p><span class="fas fa-check fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">Withhold, file and remit the GST/HST</a> (same as regular Corporations) </p>
-
-
 <h3>Payroll obligations</h3>
 <p>For payments made to a worker that is a PSB, the payroll tax obligations are different than other corporations. </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
@@ -179,6 +190,13 @@
 <li>Not registered for the GST/HST or filed the required returns </li>
 </ul>
 </details>
+
+<h3>GST/HST obligations</h3>
+<p>For a PSB, the GST/HST obligations are the same as other corporations. </p>
+
+<h3>Withholding, filing and payment obligations</h3>
+<p><span class="fas fa-check fa-lg text-success"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">Withhold, file and remit the GST/HST</a> (same as regular Corporations) </p>
+
 
 </details>
 </div></div>
