--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -92,9 +92,9 @@
 
 <p>Depending if the worker is an <strong>employee</strong>, an <strong>incorporated employee</strong> or is <strong>self-employed</strong> the tax obligations may be different.</p>
 
-<p>Understanding your tax obligations based on the type of business:</p>
+<p>To understanding the tax obligations based on the type of worker:</p>
 <ul>
-<li><a href="#tab1" class="wb-tabs-ext">Employer</a> </li>
+<li><a href="#tab1" class="wb-tabs-ext">Employee</a> </li>
 <li><a href="#tab2" class="wb-tabs-ext">Self-employed</li>
 <li><a href="#tab3" class="wb-tabs-ext">Incorporated employee</a> (personal services business)</li>
 </ul>   
@@ -102,7 +102,7 @@
  <div class="wb-tabs mrgn-tp-lg">
     <div class="tabpanels">
       <details id="tab1">
-        <summary>Employer</summary>
+        <summary>Employee</summary>
 
 <h3>Income tax obligations</h3>
 <p>Add info </p>
