--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -92,7 +92,7 @@
 
 <p>Depending if the worker is an <strong>employee</strong>, an <strong>incorporated employee</strong> or is <strong>self-employed</strong> the tax obligations may be different.</p>
 
-<p>To understanding the tax obligations based on the type of worker:</p>
+<p>Understanding the tax obligations based on the type of worker:</p>
 <ul>
 <li><a href="#tab1" class="wb-tabs-ext">Employee</a> </li>
 <li><a href="#tab2" class="wb-tabs-ext">Incorporated employee</a> (personal services business)</li>
