--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -99,9 +99,9 @@
 <li><a href="#tab3" class="wb-tabs-ext">Self-employed</li>
 </ul>   
 
- <div class="wb-tabs mrgn-tp-lg">
-    <div class="tabpanels">
-      <details id="tab1">
+ <div class="wb-tabs">
+               <div class="tabpanels">
+    <details id="tab1">
         <summary>Employee</summary>
 
 <h3>Income tax obligations</h3>
