--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -96,7 +96,7 @@
 <ul>
 <li><a href="#tab1" class="wb-tabs-ext">Employee</a> </li>
 <li><a href="#tab2" class="wb-tabs-ext">Incorporated employee</a> (personal services business)</li>
-<li><a href="#tab3" class="wb-tabs-ext">Self-employed</li>
+<li><a href="#tab3" class="wb-tabs-ext">Self-employed</a></li>
 </ul>   
 
  <div class="wb-tabs">
