--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -103,7 +103,7 @@
                <div class="tabpanels">
     <details id="tab1">
         <summary>Employee</summary>
-
+<h2>Worker is an employee - Tax obligations for employers</h2>
 <h3>Income tax obligations</h3>
 <p>Add info </p>
 
@@ -119,6 +119,7 @@
 
  <details id="tab2">
         <summary>Incorporated employee</summary>
+<h2>Worker is an incorporated employee - Tax obligations for personal services business</h2>
 <p>PSB's have different tax obligations.</p>
 <h3>Income tax obligations</h3>
 <p>For a PSB, the income tax obligations are different than other corporations. </p>
@@ -188,7 +189,7 @@
 </details>
  <details id="tab3">
         <summary>Self-employed</summary>
-
+<h2>Worker is a self-employed - Tax obligations for payers</h2>
 <h3>Income tax obligations</h3>
 <p>Add info </p>
 
