--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -189,7 +189,7 @@
 </details>
  <details id="tab3">
         <summary>Self-employed</summary>
-<h2>Worker is a self-employed - Tax obligations for payers</h2>
+<h2>Worker is self-employed - Tax obligations for payers</h2>
 <h3>Income tax obligations</h3>
 <p>Add info </p>
 
