--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -103,12 +103,27 @@
                <div class="tabpanels">
     <details id="tab1">
         <summary>Employee</summary>
-<h2>Worker is an employee - Tax obligations for employers</h2>
+<h2>Worker is an employee</h2>
 <h3>Income tax obligations</h3>
 <p>Add info </p>
 
 <h3>Payroll obligations</h3>
-<p>Add info </p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><h4 class="text-muted">Employee</h4>
+<ul>
+<li>Add info  </li>
+<li>Add info </li>
+</ul>
+<p>Learn more: add link</p>
+</li>
+<li class="cnjnctn-col"><h4 class="text-muted">Payment made to an employee</h4>
+<ul>
+<li>Add info  </li>
+<li>Add info </li>
+</ul>
+<p>Learn more: add link</p>
+</li>
+</ul>
 
 <h3>GST/HST obligations</h3>
 <p>Add info </p>
@@ -153,17 +168,17 @@
 <h3>Payroll obligations</h3>
 <p>For payments made to a worker that is a PSB, the payroll tax obligations are different than other corporations. </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><h3 class="text-muted">Payer</h3>
+<li class="cnjnctn-col"><h4 class="text-muted">Personal services business</h4>
+<ul class="fa-ul">
+<li><span class="fas fa-check fa-lg fa-li text-success"> </span> Fill out <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns/t4-information-employers/t4-slip.html">T4 slips</a> for any employees of their corporation (same as regular corporations)</li>
+</ul>
+</li>
+<li class="cnjnctn-col"><h4 class="text-muted">Payment made to an incorporated employee</h4>
 <ul class="fa-ul">
 <li><span class="fas fa-times text-danger fa-li fa-lg"> </span> <strong>Does not </strong>deduct income tax, CPP contributions or EI premiums from the PSB (worker).  </li>
 <li><span class="fas fa-check fa-lg fa-li text-success"> </span> Fill out a T4A slip (or T4A-NR, T5018 or T1204 slip depending on the situation of the PSB). </li>
 </ul>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/fees-other.html">Payments of fees for services</a>.</p>
-</li>
-<li class="cnjnctn-col"><h3 class="text-muted">PSB</h3>
-<ul class="fa-ul">
-<li><span class="fas fa-check fa-lg fa-li text-success"> </span> Fill out <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns/t4-information-employers/t4-slip.html">T4 slips</a> for any employees of their corporation (same as regular corporations)</li>
-</ul>
 </li>
 </ul>
 
@@ -189,12 +204,27 @@
 </details>
  <details id="tab3">
         <summary>Self-employed</summary>
-<h2>Worker is self-employed - Tax obligations for payers</h2>
+<h2>Worker is self-employed </h2>
 <h3>Income tax obligations</h3>
 <p>Add info </p>
 
 <h3>Payroll obligations</h3>
-<p>Add info </p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><h4 class="text-muted">Self-employed worker</h4>
+<ul>
+<li>Add info  </li>
+<li>Add info </li>
+</ul>
+<p>Learn more: add link</p>
+</li>
+<li class="cnjnctn-col"><h4 class="text-muted">Payment made to a self-employed worker</h4>
+<ul>
+<li>Add info  </li>
+<li>Add info </li>
+</ul>
+<p>Learn more: add link</p>
+</li>
+</ul>
 	 
 <h3>GST/HST obligations</h3>
 <p>Add info </p>
