--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -215,14 +215,23 @@
 <li>Add info  </li>
 <li>Add info </li>
 </ul>
+
 <p>Learn more: add link</p>
 </li>
 <li class="cnjnctn-col"><h4 class="text-muted">Payment made to a self-employed worker</h4>
-<ul>
-<li>Add info  </li>
-<li>Add info </li>
+<p class="mrgn-bttm-lg">Generally, you  <strong>do not</strong> withhold the following deductions on the payment made to a self-employed worker:</p>
+<ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
+<li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
+<li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
 </ul>
-<p>Learn more: add link</p>
+
+<p class="mrgn-bttm-lg">Generally, you must report on a <strong>T4A slip</strong> the self-employed income paid to self-employed worker.</p>
+
+<p class="mrgn-tp-lg">Under the CRA administrative policy, a slip <strong>must</strong> be issued if the total of all payments in the calendar year were <strong>more than $500</strong> or you deducted income tax from the payment.</p>   
+
+<p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
+
 </li>
 </ul>
 	 
