--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -134,7 +134,7 @@
 
  <details id="tab2">
         <summary>Incorporated employee</summary>
-<h2>Worker is an incorporated employee - Tax obligations for personal services business</h2>
+<h2>Worker is an incorporated employee (personal services business)</h2>
 <p>PSB's have different tax obligations.</p>
 <h3>Income tax obligations</h3>
 <p>For a PSB, the income tax obligations are different than other corporations. </p>
