--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -103,7 +103,7 @@
                <div class="tabpanels">
     <details id="tab1">
         <summary>Employee</summary>
-<h2>Worker is an employee</h2>
+
 <h3>Income tax obligations</h3>
 <p>Add info </p>
 
@@ -134,7 +134,7 @@
 
  <details id="tab2">
         <summary>Incorporated employee</summary>
-<h2>Worker is an incorporated employee (personal services business)</h2>
+
 <p>PSB's have different tax obligations.</p>
 <h3>Income tax obligations</h3>
 <p>For a PSB, the income tax obligations are different than other corporations. </p>
@@ -204,7 +204,7 @@
 </details>
  <details id="tab3">
         <summary>Self-employed</summary>
-<h2>Worker is self-employed </h2>
+
 <h3>Income tax obligations</h3>
 <p>Add info </p>
 
@@ -219,15 +219,16 @@
 <p>Learn more: add link</p>
 </li>
 <li class="cnjnctn-col"><h4 class="text-muted">Payment made to a self-employed worker</h4>
-<p class="mrgn-bttm-lg">Generally, you  <strong>do not</strong> withhold the following deductions on the payment made to a self-employed worker:</p>
+<h5 class="mrgn-bttm-lg">Withholding obligations</h5>
 <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
 <li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
 <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
 </ul>
-
-<p class="mrgn-bttm-lg">Generally, you must report on a <strong>T4A slip</strong> the self-employed income paid to self-employed worker.</p>
-
+<h5 class="mrgn-bttm-lg">Reporting obligations</h5>
+<ul class="fa-ul mrgn-bttm-lg">
+<li><span class="fas fa-check fa-li text-success"></span> T4A slip <small>- Generally, report the <strong>self-employed income</strong> </small></li>	
+</ul>
 <p class="mrgn-tp-lg">Under the CRA administrative policy, a slip <strong>must</strong> be issued if the total of all payments in the calendar year were <strong>more than $500</strong> or you deducted income tax from the payment.</p>   
 
 <p class="mrgn-tp-lg">Learn more: <span class="fas fa-file-invoice fa-xl text-muted"></span> <a href="/cra-arc/payroll/file/t4aslip.html">T4A slip - Information for payers</a></p>
@@ -238,7 +239,6 @@
 <h3>GST/HST obligations</h3>
 <p>Add info </p>
 
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/small-businesses-self-employed-income/checklist-small-businesses.html">Checklist for businesses</a> </p>
 </details>
 </div></div>
   
