--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -109,14 +109,14 @@
 
 <h3>Payroll obligations</h3>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><h4 class="text-muted">Employee</h4>
+<li class="cnjnctn-col"><h4>Employee</h4>
 <ul>
 <li>Add info  </li>
 <li>Add info </li>
 </ul>
 <p>Learn more: add link</p>
 </li>
-<li class="cnjnctn-col"><h4 class="text-muted">Payment made to an employee</h4>
+<li class="cnjnctn-col"><h4>Payment made to an employee</h4>
 <ul>
 <li>Add info  </li>
 <li>Add info </li>
@@ -168,12 +168,12 @@
 <h3>Payroll obligations</h3>
 <p>For payments made to a worker that is a PSB, the payroll tax obligations are different than other corporations. </p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><h4 class="text-muted">Personal services business</h4>
+<li class="cnjnctn-col"><h4>Personal services business</h4>
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-lg fa-li text-success"> </span> Fill out <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/payroll/completing-filing-information-returns/t4-information-employers/t4-slip.html">T4 slips</a> for any employees of their corporation (same as regular corporations)</li>
 </ul>
 </li>
-<li class="cnjnctn-col"><h4 class="text-muted">Payment made to an incorporated employee</h4>
+<li class="cnjnctn-col"><h4>Payment made to an incorporated employee</h4>
 <ul class="fa-ul">
 <li><span class="fas fa-times text-danger fa-li fa-lg"> </span> <strong>Does not </strong>deduct income tax, CPP contributions or EI premiums from the PSB (worker).  </li>
 <li><span class="fas fa-check fa-lg fa-li text-success"> </span> Fill out a T4A slip (or T4A-NR, T5018 or T1204 slip depending on the situation of the PSB). </li>
@@ -210,7 +210,7 @@
 
 <h3>Payroll obligations</h3>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><h4 class="text-muted">Self-employed worker</h4>
+<li class="cnjnctn-col"><h4>Self-employed worker</h4>
 <ul>
 <li>Add info  </li>
 <li>Add info </li>
@@ -218,7 +218,7 @@
 
 <p>Learn more: add link</p>
 </li>
-<li class="cnjnctn-col"><h4 class="text-muted">Payment made to a self-employed worker</h4>
+<li class="cnjnctn-col"><h4>Payment made to a self-employed worker</h4>
 <h5 class="mrgn-bttm-lg">Withholding obligations</h5>
 <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
