--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -219,14 +219,14 @@
 <p>Learn more: add link</p>
 </li>
 <li class="cnjnctn-col"><h4>Payment made to a self-employed worker</h4>
-<h5 class="mrgn-bttm-lg">Withholding obligations</h5>
-<ul class="fa-ul mrgn-bttm-lg">
+<h5>Withholding obligations</h5>
+<ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
 <li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
 <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
 </ul>
-<h5 class="mrgn-bttm-lg">Reporting obligations</h5>
-<ul class="fa-ul mrgn-bttm-lg">
+<h5>Reporting obligations</h5>
+<ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check fa-li text-success"></span> T4A slip <small>- Generally, report the <strong>self-employed income</strong> </small></li>	
 </ul>
 
