--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -211,20 +211,42 @@
 <h3>Payroll obligations</h3>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><h4>Self-employed worker</h4>
-<ul>
-<li>Add info  </li>
-<li>Add info </li>
+
+<h5>Income tax and contributions obligations</h5>
+<ul class="fa-ul mrgn-bttm-md">
+<li><span class="fas fa-check fa-li text-success"></span> Income Tax <small>- Calculate the amount of income tax when filling out the <strong>T1 income tax and benefit return</strong></small> </li>	
+<li><span class="fas fa-exclamation-triangle fa-li text-warning"></span> EI <small>- Calculate the amount to contribute only if you participate in the special EI program when filling out the <strong>T1 income tax and benefit return</strong></small></li>
+<li><span class="fas fa-check fa-li text-success"></span> CPP <small>- Calculate the amount to contribute when filling out the <strong>T1 income tax and benefit return</strong> (both employer and employee portion)</small></li> 
+<li><span class="fas fa-check fa-li text-success"></span> QPIP <small>- Calculate the amount to contribute when filling out the <strong>Quebec income tax return</strong></small></li>
 </ul>
 
-<p>Learn more: add link</p>
+<h5>GST/HST remitting obligations</h5>
+<ul class="fa-ul mrgn-bttm-md">
+<li><span class="fas fa-check fa-li text-success"></span> GST/HST <small>in certain situations </small></li>	
+</ul>
+
+<h5>Reporting obligations</h5>
+<ul class="fa-ul mrgn-bttm-md">
+<li><span class="fas fa-check fa-li text-success"></span> T1 or T2 return <small> </small></li>	
+</ul>
+<p class="mrgn-tp-lg">Learn more:</p>
+<ul>
+<li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/sole-proprietorships-partnerships/business-expenses.html">Business expenses self-employed workers may deduct</a></li>
+<li> <a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/contributions.html">Contributions to the Canada Pension Plan</a></li>
+<li> <a href="https://www.canada.ca/en/services/benefits/ei/ei-self-employed-workers.html">EI benefits for self-employed people</a></li>
+<li> <a href="https://www.revenuquebec.ca/en/businesses/source-deductions-and-employer-contributions/calculating-source-deductions-and-employer-contributions/quebec-parental-insurance-plan-qpip-premiums/">Québec Parental Insurance Plan (QPIP) | Revenu Québec</a></li>
+<li> <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/gst-hst-businesses.html">GST/HST for businesses</a></li>
+</ul>
 </li>
 <li class="cnjnctn-col"><h4>Payment made to a self-employed worker</h4>
-<h5>Withholding obligations</h5>
+<h5>Withholding and remitting obligations</h5>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-times text-danger fa-li"></span> Income tax <small>- <strong>Do not</strong> withhold</small></li>	
 <li><span class="fas fa-times text-danger fa-li"></span> EI <small>- <strong>Do not</strong> withhold</small></li>
 <li><span class="fas fa-times text-danger fa-li"></span> CPP <small>- <strong>Do not</strong> withhold</small></li> 
+<li><span class="fas fa-times text-danger fa-li"></span> GST/HST <small>- <strong>Do not</strong> remit</small></li> 
 </ul>
+
 <h5>Reporting obligations</h5>
 <ul class="fa-ul mrgn-bttm-md">
 <li><span class="fas fa-check fa-li text-success"></span> T4A slip <small>- Generally, report the <strong>self-employed income</strong> </small></li>	
